[project]
name = "ctf-ad-agents"
version = "0.1.0"
description = "Multi-agent AI system for CTF Attack & Defense competitions"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = [

]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
